# c-data-structures

./: .gitignore  CMakeLists.txt  Makefile  ci.yaml
.github/workflows/: ci.yaml
src/: dynamic_array.c  dynamic_array.h  linear_data_structure.c  linear_data_structure.h  main.c  queue.c  queue.h  stack.c  stack.h
tests/: CMakeLists.txt  main.c  test.c  test.h  test_dynamic_array.c  test_stack.c
